[workspace]

resolver = "1"
members = [
    "src/vault",
    "src/share_token",
    "src/registry",
    "src/nomination_agent",
    "src/mock_nominator",
    "src/governor",
    "src/governance_nft",
    "src/governance_staking",
    "src/governance_token"

]
exclude = [
    "drink_tests",
    "governance_tests"
]
