[package]
name = "drink_test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
drink = { version = "=0.5.4", features = ["session"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
serde = "1.0.193"
serde_json = "1.0.108"

[lib]
name = "drink_test"
path = "lib.rs"
