[package]
name = "governance_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
drink = { version = "=0.5.4", features = ["session"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
serde = "1.0.193"
serde_json = "1.0.108"
governance_nft = { path = "../src/governance_nft", default-features = false, features = [
    "ink-as-dependency",
] }
governance = { path = "../src/governance", default-features = false, features = [
    "ink-as-dependency",
] }
[lib]
name = "governance_tests"
path = "lib.rs"
