[package]
name = "governance_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
drink = { version = "=0.5.4", features = ["session"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
serde = "1.0.193"
serde_json = "1.0.108"
psp34 = { git = "https://github.com/Cardinal-Cryptography/PSP34.git", default-features = false }
[lib]
name = "governance_tests"
path = "lib.rs"
std = ["ink/std", "scale/std", "scale-info", "scale-info/std","psp34/std"]

