[package]
name = "multisig"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false,features = ["ink-debug"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "=2.11.2", default-features = false, features = [
    "derive",
], optional = true }
psp34 = { git = "https://github.com/Cardinal-Cryptography/PSP34.git", default-features = false }
registry = { path = "../registry", default-features = false, features = [
    "ink-as-dependency",
] }
vault = { path = "../vault", default-features = false, features = [
    "ink-as-dependency",
] }

psp22 = { version = "=0.2.1", default-features = false }
[lib]
name = "multisig"
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info", "scale-info/std","psp34/std"]
ink-as-dependency = []
