[package]
name = "nomination_agent"
version = "0.1.0"
authors = ["Brandon <brandon@watercoolerstudios.io>", "John <john@watercoolerstudios.io"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false, features = [
    "call-runtime",
    "ink-debug"
] }
scale = { package = "parity-scale-codec", version = "=3.6.12", default-features = false, features = [
    "derive",
] }
scale-info = { version = "=2.11.2", default-features = false, features = [
    "derive",
], optional = true }
sp-io = { version = "=34.0.0", default-features = false }
sp-runtime = { version = "=35.0.0", default-features = false }

[lib]
name = "nomination_agent"
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "sp-runtime/std", "sp-io/std"]
ink-as-dependency = []
