[package]
name = "registry"
version = "0.1.0"
authors = ["Brandon <brandon@watercoolerstudios.io>", "John <john@watercoolerstudios.io"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "=3.6.12", default-features = false, features = [
    "derive",
] }
scale-info = { version = "=2.11.2", default-features = false, features = [
    "derive",
], optional = true }
scale-derive = { package = "parity-scale-codec-derive", version = "=3.6.12" }
nomination_agent = { path = "../nomination_agent", default-features = false, features = [
    "ink-as-dependency",
] }

[lib]
name = "registry"
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info", "scale-info/std", "nomination_agent/std"]
ink-as-dependency = []
