[package]
name = "share_token"
version = "0.1.0"
authors = ["Brandon <brandon@watercoolerstudios.io>", "John <john@watercoolerstudios.io"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "=3.6.12", default-features = false, features = [
    "derive",
] }
scale-info = { version = "=2.11.2", default-features = false, features = [
    "derive",
], optional = true }
scale-derive = { package = "parity-scale-codec-derive", version = "=3.6.12" }
psp22 = { version = "=0.2.1", default-features = false }

[lib]
name = "share_token"
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info", "scale-info/std", "psp22/std"]
ink-as-dependency = []
contract = []
