[package]
name = "vault"
version = "0.1.0"
authors = ["Brandon <brandon@watercoolerstudios.io>", "John <john@watercoolerstudios.io"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false, features = ["ink-debug"] }
scale = { package = "parity-scale-codec", version = "=3.6.12", default-features = false, features = [
    "derive",
] }
scale-info = { version = "=2.11.2", default-features = false, features = [
    "derive",
], optional = true }
psp22 = { version = "=0.2.1", default-features = false }
num-bigint = { version = "=0.4.5", default-features = false }
num-traits = { version = "=0.2.19", default-features = false }
registry = { path = "../registry", default-features = false, features = [
    "ink-as-dependency",
] }
share_token = { path = "../share_token", default-features = false, features = [
    "ink-as-dependency",
] }

[lib]
name = "vault"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "psp22/std",
    "num-bigint/std",
    "num-traits/std",
    "registry/std",
]
ink-as-dependency = []
